--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   sign_in_with_apple: ^6.1.1
   firebase_core: ^3.1.0
   flutter_dotenv: ^5.1.0
+  go_router: ^14.2.0
+  sliding_clipped_nav_bar: ^3.1.1
 
 dev_dependencies:
   flutter_test:
