--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   go_router: ^14.2.0
   sliding_clipped_nav_bar: ^3.1.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
