--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   go_router: ^14.2.0
   sliding_clipped_nav_bar: ^3.1.1
   uuid: ^4.4.0
+  infinite_carousel: ^1.1.1
+  cloud_firestore: ^5.0.1
 
 dev_dependencies:
   flutter_test:
