--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,12 @@ dependencies:
   uuid: ^4.4.0
   infinite_carousel: ^1.1.1
   cloud_firestore: ^5.0.1
-  fl_chart: ^0.68.0
+  camera_camera: any
+  file_picker: any
+  flutter_sliding_up_panel: any
+  photo_gallery: any
+  photo_view: any
+  permission_handler: any
 
 dev_dependencies:
   flutter_test:
