--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   infinite_carousel: ^1.1.1
   cloud_firestore: ^5.0.1
   fl_chart: ^0.68.0
+  dash_chat_2: ^0.0.21
+  chat_gpt_sdk: ^3.0.9
 
 dev_dependencies:
   flutter_test:
@@ -74,9 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
